# runloom

./: .gitattributes  .gitignore  CLAUDE.md  COVERAGE.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  queue_ref_fix.patch  setup.py  top_100.txt
.githooks/: pre-commit
bench/: .gitignore  README.md  __init__.py  bench_aio.py  bench_aio_io.py  bench_c_scheduler.py  bench_chan.py  bench_concurrent_yield.py  bench_iouring.py  bench_mn.py  bench_mn_netpoll.py  bench_mn_sleep.py  bench_mn_yield.py  bench_preempt.py  bench_serve.py  bench_snap.py  bench_spawn.py  bench_spawn_yield.py  bench_sustained.py  bench_tcp_native.py  bench_tcpconn.py  bench_tcpconn_concurrent.py  bench_tcpconn_go.go  bench_tcpconn_mn.py  conftest.py  cycompile.py  gil.py  harness.py  micro.py  mn.py  poc_compile_handler.py  regress.py  test_bench.py
benchmark/: README.md  README_SECTIONS.md  big100_syscall_backends.html  big100_syscall_profile_linux.html  big100_syscall_profile_mac.html  big100_syscall_profile_win.html  gen_syscall_backends_html.py  gen_syscall_profile.py  report.html
big_100/: .gitignore  README.md  harness.py  httputil.py  netutil.py  p01_tcp_echo.py  p02_slowloris.py  p03_accept_storm.py  p04_tcp_proxy.py  p05_http_crawler.py  p06_http_keepalive.py  p07_udp_storm.py  p08_udp_timeout_matrix.py  p09_dns_stampede.py  p100_replay_stress.py  p101_fd_reuse_after_cancel.py  p102_cancelled_recv_fd_recycle.py  p103_cancelled_accept_listener_reuse.py  p105_close_while_blocked_read.py  p106_close_while_blocked_write.py  p107_half_close_matrix.py  p10_happy_eyeballs.py  p111_fork_while_scheduler_active.py  p115_keyboardinterrupt_chaos.py  p119_timer_cancel_boundary.py  p11_tls_swarm.py  p125_timeout_nesting.py  p126_wait_any.py  p128_parent_cancel_cascade.py  p12_websocket_chat.py  p131_multiple_joiners.py  p134_shutdown_active_tasks.py  p135_exit_live_sockets.py  p139_del_spawns_fiber_shutdown.py  p139_del_spawns_goroutine_shutdown.py  p13_port_exhaustion.py  p141_gc_during_migration.py  p143_weakref_callback_cancellation.py  p144_cyclic_traceback_leak.py  p147_generator_finally_cancel.py  (+118 more)
bughunt_repros/: concurrent_mn.py  concurrent_mn2.py  copoll_deadlock.py  crecursion_probe.py  ctx_cancel_mn_lingers.py  ctx_children_leak.py  early_exit_amplified.py  early_exit_pending.py  event_smoke.py  foreign_thread_chan.py  fpenv_mn.py  hammer_close_race.py  hammer_refcount.py  hammer_selfselect.py  hot_auto_wrong_closure.py  hot_nested_rebind.py  leak_empty_long.py  misc_semantics.py  mn_deadlock.py  msg_waitall.py  nonblocking.py  r02_close_running_loop.py  r03b_install_asyncio_run.py  r05_streamwriter_close_dataloss.py  r06_reader_aiter.py  r07_abort_after_close.py  r08_serve_forever_cancel.py  r09_create_connection_nameerror.py  r11_sequential_executor_runs.py  r12_stock_task_factory.py  r16_datagram_surface.py  r17_run_coroutine_threadsafe.py  r19_done_future_pending_cbs.py  r20_halfclose_pause.py  r21_get_stack.py  r22_cancelled_timer_leak.py  r23_getnameinfo_blocks_loop.py  r4b_hang.py  r6_close_park_window.py  repro_chan_new_crash.py  (+19 more)
demo/: .gitignore  README.md  burst_client.py  mnweb.py  repro_pool_leak.py  site.py  supervisor.sh  watch_tick.sh
docs/: api-reference.md  asyncio.md  channels.md  cookbook.md  cooperative_stdlib_coverage.md  debugging.md  hot-handlers.md  index.md  installation.md  monkey-patching.md  optimize.md  parallelism.md  preemption.md  quickstart.md  reporting-crashes.md  research-native-code.md  resource-limits.md  stack-sizing.md  sync-api.md
examples/: README.md  asyncio_bridge.py  bench_aio.py  bench_c_scheduler.py  bench_chan.py  bench_concurrent_yield.py  bench_iouring.py  bench_mn.py  bench_mn_netpoll.py  bench_mn_sleep.py  bench_preempt.py  bench_snap.py  bench_spawn.py  bench_tcpconn_concurrent.py  bench_tcpconn_go.go  channels.py  context_cancel.py  echo_client.py  echo_server.py  fan_in.py  fan_out.py  hello_fibers.py  hello_goroutines.py  http_server.py  mn_parallel.py  offload_blocking.py  ping_pong.py  pipeline.py  port_scanner.py  prime_sieve.py  segfault_dump.py  select.py  select_demo.py  semaphore.py  tcp_proxy.py  ticker.py  timeout.py  udp_echo.py  waitgroup.py  worker_pool.py
patches/: README.md  cpython313t-tstate-alloc-home.patch
scripts/: audit_wheels.sh  bench.sh  bootstrap_compiler.bat  bootstrap_compiler.ps1  bootstrap_compiler.sh  build_wheels.sh  check_all.sh  check_all_extensive.sh  check_all_fast.sh  check_chess.sh  check_ctxcheck.sh  check_dbg_netpoll.sh  check_migration_delay.sh  check_wake_protocol.sh  collect_wheels.sh  install.bat  install.sh  release_hosts.env.example
specs/: 00-overview.md  01-stackful-coroutines.md  02-fiber-and-scheduler.md  02-goroutine-and-scheduler.md  03-cpython-state-snapshot.md  04-park-wake-protocol.md  05-mn-scheduler.md  06-netpoll.md  07-channels-and-select.md  08-blocking-preemption-offload.md  09-cpython-freethreaded-boundary.md  10-stack-safety-and-sizing.md  11-crash-and-introspection.md  12-public-api.md  13-asyncio-bridge.md  14-monkey-cooperative-stdlib.md  15-verification-and-testing.md  16-portability.md  17-asyncio-bridge-derivation.md  README.md
src/: pygo_core.pyi  runloom_c.pyi
synthetic/: .gitignore  findings_mp_feeder_repro.py  gen.py  manifest.json
tests/: .python-version  _monkey_stdlib.py  adv_util.py  conftest.py  cov_workload.py  fd_io_fault_workload.py  iouring_fault_workload.py  netpoll_fault_workload.py  netpoll_inproc_fault_workload.py  run_isolated.py  run_tests.py  tcp_fault_workload.py  test_adv_aio.py  test_adv_chan.py  test_adv_coro.py  test_adv_fileio.py  test_adv_monkey.py  test_adv_netpoll.py  test_adv_offload.py  test_adv_sched.py  test_adv_stack.py  test_adv_sync.py  test_adv_tcpconn.py  test_adv_timers.py  test_aio.py  test_aio_cancel_torture.py  test_aio_compat.py  test_aio_fd_reuse.py  test_aio_net.py  test_aio_prerun_crossthread.py  test_arm64.c  test_arm64.sh  test_asyncio_bufferedproto_conformance.py  test_asyncio_conformance.py  test_asyncio_server_conformance.py  test_blocking.py  test_blocking_faultinject.py  test_chan.py  (+212 more)
(+3278 files in other folders)
