[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygo"
version = "0.0.1"
description = "Go-style coroutines in Python (stackful, transparent-blocking I/O via socket monkey-patch)."
requires-python = ">=3.11"
# Keep the table form for compatibility with setuptools < 77.
# The newer SPDX-string `license = "MIT"` form requires setuptools 77+.
license = {text = "MIT"}
authors = [{name = "Matthew Roberts", email = "matthew@roberts.pm"}]
